Bug FIxes bei der Decision von der AI